Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12042

sanity test_103a: FAIL: LU-974 umask test failed under remote dir

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • Lustre 2.13.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for S Buisson <sbuisson@ddn.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/efdb833a-3ee3-11e9-a256-52540065bddc

      test_103a failed with the following error:

      LU-974 umask test failed under remote dir
      

      Trace is as follows:

      [63] $ rm d/f -- ok
      [64] $ rmdir d/subdir -- ok
      [65] $ mv d tree -- ok
      [66] $ ./make-tree -- ok
      [67] $ getfacl tree/dir0/dir5/file4 -- ok
      [77] $ getfacl tree/dir0/dir6/file4 -- ok
      [87] $ echo i >> tree/dir6/dir2/file2 -- ok
      [88] $ echo i > tree/dir1/f -- ok
      [89] $ ls -l tree/dir1/f | awk -- '{ print $1 }' -- ok
      [98] $ rm -rf tree -- ok
      22 commands (22 passed, 0 failed)
      LU-974 ignore umask when acl is enabled...
      [3] $ umask 022 -- ok
      [4] $ mkdir 974 -- ok
      [6] $ touch 974/f1 -- ok
      [7] $ ls -dl 974/f1 | awk '{sub(/\./, "", $1); print $1 }' -- ok
      [10] $ setfacl -R -d -m mask:007 974 -- ok
      [11] $ touch 974/f2 -- ok
      [12] $ ls -dl 974/f2 | awk '{ print $1 }' -- ok
      [15] $ umask 077 -- ok
      [16] $ touch f3 -- ok
      [17] $ ls -dl f3 | awk '{sub(/\./, "", $1); print $1 }' -- ok
      [20] $ rm -rf 974 -- ok
      11 commands (11 passed, 0 failed)
      [3] $ umask 022 -- ok
      [4] $ lfs mkdir -i 1 974 -- failed
      ~                                     ? warning: '-m' is deprecated, use '--mode' or '-o' instead
      [6] $ touch 974/f1 -- ok
      [7] $ ls -dl 974/f1 | awk '{ print $1 }' -- ok
      [10] $ setfacl -R -d -m mask:007 974 -- ok
      [11] $ touch 974/f2 -- ok
      [12] $ ls -dl 974/f2 | awk '{ print $1 }' -- ok
      [15] $ umask 077 -- ok
      [16] $ touch f3 -- ok
      [17] $ ls -dl f3 | awk '{ print $1 }' -- ok
      [20] $ rm -rf 974 -- ok
      11 commands (10 passed, 1 failed)
       sanity test_103a: @@@@@@ FAIL: LU-974 umask test failed under remote dir 
      

      Failure rate of sanity test_103a is very high. Not sure it is the same issue as LU-11594.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_103a - LU-974 umask test failed under remote dir

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: