LU-12042 utils: Remove stray waring from lfs mkdir

lfs mkdir -i shouldn't issue a warning about -m being depricated.

Test-Parameters: trivial mdtcount=2 mdscount=2
Signed-off-by: Nathaniel Clark <nclark@whamcloud.com>
Change-Id: I7012ff8ec7499b07d6463c2637c8bedcb3976fe2
Reviewed-on: https://review.whamcloud.com/34374
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>